# optitrack_dance_demo

./: .gitignore  CMakeLists.txt
include/: Human.cpp  Human.h
model/HRP4c/: HRP4c.urdf
model/HRP4c/graphics/: CHEST_Y2.mtl  CHEST_Y2_rev2.mtl  Helmet_roboCop_rev2.mtl  Helmet_roboCop_rev2_green.mtl  Helmet_roboCop_rev2_purple.mtl  L_ANKLE_R.mtl  L_ELBOW_P_rev2.mtl  L_HIP_P_rev2.mtl  L_KNEE_P_rev2.mtl  L_SHOULDER_Y_rev2.mtl  NECK_P.mtl  R_ANKLE_R_rev2.mtl  R_ELBOW_P_rev2.mtl  R_HIP_P_rev2.mtl  R_KNEE_P_rev2.mtl  R_SHOULDER_Y_rev2.mtl  R_WRIST_R_rev2.mtl  R_WRIST_Y_rev2.mtl  WAIST.mtl
model/mmp_panda/meshes/: panda_base.mtl
model/standard_type/meshes/collision/: battery_s.mtl  chuck_s_L.mtl  chuck_s_R.mtl  rack_s.mtl  x-body_s.mtl  x-slider_s.mtl  z-frame_s.mtl
model/test_objects/meshes/collision/Project_Objs/: Fire_Disk.mtl  Wall.mtl  debris_block.mtl  ground.mtl
model/test_objects/meshes/visual/: bottle.mtl  ground.mtl
optitrack/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  StreamDataSkeleton.py  cmake_install.cmake  controller_settings.yaml  controller_settings_1_dancer.yaml  controller_settings_2_dancers.yaml  controller_settings_multi_dancers.yaml  keyboard_inputs.py  launch_demo.sh  mac_keyboard_inputs.py  redis_keys.h  simviz.cpp  simviz_2dancers.cpp  toro_controller.cpp  toro_controller_2dancers.cpp  verify_optitrack.cpp  verify_skeleton.py  write_redis.py
optitrack/archive/: toro_controller.cpp
optitrack/graphs/: plot_bars.py  plot_dual_metrics.py  plot_lagrangian_bars.py  plot_lagrangian_lines.py  plot_metrics.py  test_other_plot.py  test_plot.py
optitrack/model/: HRP4c.urdf  HRP4c_green.urdf  HRP4c_purple.urdf
optitrack/myenv/: pyvenv.cfg
optitrack/optitrack/: Makefile  cmake_install.cmake
optitrack/recordings/: dual_oct_15_rev1.txt  jump.txt  jump_2_dancers.txt  right_lift.txt
optitrack/utils/: LED.py  duplicate_dancers.py  obj_convert.py  plot_trackers.py  read_redis.py
optitrack/world/: world_basic_1.urdf  world_basic_10.urdf  world_basic_2.urdf  world_basic_3.urdf  world_test.urdf
